--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,9 @@
 
   <title>{%if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 
+  <link rel="icon" href="/assets/favicon.png">
+
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl | replace: '//', '/' }}">
-  
+
   <link href="/atom.xml" type="application/atom+xml" rel="alternate" title="ATOM Feed" /> {% seo %}
 </head>
