Use files for about/links, rather than directories

--- a/_includes/links.html
+++ b/_includes/links.html
@@ -1,4 +1,4 @@
 <a href="{{ "/archive.html" | prepend: site.baseurl | replace: '//', '/' }}"><h2 class="header-link">Archive</h2></a>
-<a href="{{ "/about" | prepend: site.baseurl | replace: '//', '/' }}"><h2 class="header-link">About</h2></a>
+<a href="{{ "/about.html" | prepend: site.baseurl | replace: '//', '/' }}"><h2 class="header-link">About</h2></a>
 <a href="{{ "/feed.xml" | prepend: site.baseurl | replace: '//', '/' }}"><h2 class="header-link">RSS</h2></a>
-<a href="{{ "/links" | prepend: site.baseurl | replace: '//', '/' }}"><h2 class="header-link">Links</h2></a>
+<a href="{{ "/links.html" | prepend: site.baseurl | replace: '//', '/' }}"><h2 class="header-link">Links</h2></a>
