--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,8 +6,9 @@
   <title>{%if page.title %}{{ page.title }} - {% endif %}{{ site.title }}</title>
 
   <link rel="icon" href="/assets/favicon.png">
-
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl | replace: '//', '/' }}">
+  <link rel="alternate" href="/atom.xml" type="application/atom+xml" title="ATOM Feed" />
+  <link rel="me" href="https://fedi.pfarley.dev/@pfarley">
 
-  <link href="/atom.xml" type="application/atom+xml" rel="alternate" title="ATOM Feed" /> {% seo %}
+  {% seo %}
 </head>
