--- a/blog/_includes/footer.html
+++ b/blog/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer>
-  <a href="https://creativecommons.org/licenses/by-sa/4.0/">
+  <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/">
     <span>
         <b>{{ site.owner}}</b>
     </span>
