--- a/blog/_includes/footer.html
+++ b/blog/_includes/footer.html
@@ -1,9 +1,1 @@
-<footer>
-  <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/">
-    <span>
-        <b>{{ site.owner}}</b>
-    </span>
-    {% capture currentyear %}{{ 'now' | date: "%Y" }}{% endcapture %}
-    <span>© {{ currentyear }}</span>
-  </a>
-</footer>
+../../common/includes/footer.html
