Use default bullets, remove bullets for blog list

--- a/common/sass/base.scss
+++ b/common/sass/base.scss
@@ -142,8 +142,8 @@ dt {
   font-weight: bold;
 }
 
-ul li {
-  list-style-image:url('../assets/bullet.png');
+.post-list li {
+  list-style-type: none;
 }
 
 blockquote {
