--- a/blog/_includes/links.html
+++ b/blog/_includes/links.html
@@ -1,3 +1,3 @@
-<a href="https://pfarley.dev"><h2 class="header-link">pfarley.dev</h2></a>
+<a href="https://pfarley.dev"><h2 class="header-link">Home</h2></a>
 <a href="{{ "/archive.html" | prepend: site.baseurl | replace: '//', '/' }}"><h2 class="header-link">Archive</h2></a>
 <a href="{{ "/feed.xml" | prepend: site.baseurl | replace: '//', '/' }}"><h2 class="header-link">RSS</h2></a>
