--- a/common/sass/base.scss
+++ b/common/sass/base.scss
@@ -53,7 +53,7 @@ li {
 
 header {
   background: rgba(0, 0, 0, 0.1);
-  border-bottom: 1px dashed $conifer; //header;
+  border-bottom: 1px dashed $conifer;
   padding: 20px;
   margin: 0 0 40px 0;
 }
@@ -268,6 +268,12 @@ a:active, a:focus {
   height: 50px;
   line-height: 50px;
   text-align: center;
+}
+
+footer {
+  background: rgba(0, 0, 0, 0.1);
+  border-top: 1px dashed $conifer;
+  padding: 20px;
 }
 
 #wrapper {
