--- a/common/sass/base.scss
+++ b/common/sass/base.scss
@@ -37,10 +37,6 @@ section {
   margin: 0 0 20px 0;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  margin: 0 0 20px;
-}
-
 li {
   line-height: 1.4 ;
 }
@@ -73,12 +69,8 @@ header h1 {
   text-align: center;
   font-weight: bold;
   font-family: $default-font-family;
-  color: $conifer;//$header;
-  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1),
-               0 0 5px rgba(181, 232, 83, 0.1),
-               0 0 10px rgba(181, 232, 83, 0.1);
+  color: $conifer;
   letter-spacing: -1px;
-  -webkit-font-smoothing: antialiased;
 }
 
 header h2 {
@@ -92,7 +84,6 @@ header h2 {
 
 #main_content {
   width: 100%;
-  -webkit-font-smoothing: antialiased;
 }
 section img {
   max-width: 100%
@@ -103,9 +94,7 @@ h1, h2, h3, h4, h5, h6 {
   font-family: $default-font-family;
   color: $header;
   letter-spacing: -0.03em;
-  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1),
-               0 0 5px rgba(181, 232, 83, 0.1),
-               0 0 10px rgba(181, 232, 83, 0.1);
+  margin: 0 0 20px;
 }
 
 #main_content h1 {
@@ -195,42 +184,6 @@ hr {
   color: #b5e853;
 }
 
-/* Buttons
-*/
-
-.btn {
-  display: inline-block;
-  background: -webkit-linear-gradient(top, rgba(40, 40, 40, 0.3), rgba(35, 35, 35, 0.3) 50%, rgba(10, 10, 10, 0.3) 50%, rgba(0, 0, 0, 0.3));
-  padding: 8px 18px;
-  border-radius: 50px;
-  border: 2px solid rgba(0, 0, 0, 0.7);
-  border-bottom: 2px solid rgba(0, 0, 0, 0.7);
-  border-top: 2px solid rgba(0, 0, 0, 1);
-  color: rgba(255, 255, 255, 0.8);
-  font-family: Helvetica, Arial, sans-serif;
-  font-weight: bold;
-  font-size: 13px;
-  text-decoration: none;
-  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.75);
-  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.05);
-}
-
-.btn:hover {
-  background: -webkit-linear-gradient(top, rgba(40, 40, 40, 0.6), rgba(35, 35, 35, 0.6) 50%, rgba(10, 10, 10, 0.8) 50%, rgba(0, 0, 0, 0.8));
-}
-
-.btn .icon {
-  display: inline-block;
-  width: 16px;
-  height: 16px;
-  margin: 1px 8px 0 0;
-  float: left;
-}
-
-.btn-github .icon {
-  opacity: 0.6;
-  background: url("../images/blacktocat.png") 0 0 no-repeat;
-}
 
 /* Links
    a, a:hover, a:visited
@@ -238,13 +191,11 @@ hr {
 
 a {
   color: #63c0f5;
-  text-shadow: 0 0 5px rgba(104, 182, 255, 0.5);
 }
 
 a:active, a:focus {
   outline: 0;
   border: none;
-  -moz-outline-style: none
 }
 
 /* Clearfix */
